# git-mcp-actor

./: Cargo.toml  manifest.toml
.github/: README.md
.github/workflows/: release.yml
src/: bindings.rs  lib.rs
wit/: world.wit
