[package]
name = "git-mcp-actor"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mcp-protocol = "0.2.5"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:git-mcp-actor"

[package.metadata.component.target.dependencies]
"theater:simple" = { path = "./wit/deps/theater-simple" }
